finished getting the uploader deployed added to the app.yaml small edit to the upload controller minor changes to the dockerfile